--- a/SalesReportGenerator/SalesReportGenerator/SalesReportGenerator.csproj
+++ b/SalesReportGenerator/SalesReportGenerator/SalesReportGenerator.csproj
@@ -40,10 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IReportReader.cs" />
+    <Compile Include="ColumnAttribute.cs" />
+    <Compile Include="IReportProvider.cs" />
+    <Compile Include="IReportRow.cs" />
     <Compile Include="IReportWriter.cs" />
     <Compile Include="ReportReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportRow.cs" />
     <Compile Include="ReportWriter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
